# reinforcement_learning_training

./: .gitignore  Breakout_SimpleDQN.py  DQN_baseline.py  SimpleDQN.py  cart_pole.py  cart_pole_DQN_baseline.py  cart_pole_ann.py  environment.yml  frozen_lake.py  readme
DQN/: Breakout_SimpleDQN.py  SimpleDQN.py
PPO/: PpoAgent.py  PpoCartpole.py  PpoLunar.py  PpoShootingGame.py  PpoSnake.py  SimplePPO.py
agents/: McPolicyGradient.py  McReinforceWithBaseline.py  TrueOnlineSarsa.py  TrueOnlineTDLamda.py
environments/: __init__.py
environments/envs/: __init__.py  basic_snake.py  starfighter.py
environments/envs/cpp_envs/shooting_game/: CMakeLists.txt  ShootingGame.hpp  ShootingGameEnv.py  ShootingGameModule.cpp  __init__.py  example.py
environments/envs/cpp_envs/shooting_game_base/: CMakeLists.txt  ShootingGame.hpp  ShootingGameModule.cpp  example.py  shooting_game_env.py
utils/: calculate_baselines.py  combine_videos.py  progress_bar.py
